// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Swagger integration > OpenSpec2 > should swagger spec 1`] = `
{
  "consumes": [
    "application/json",
  ],
  "definitions": {
    "Calendar": {
      "properties": {
        "id": {
          "type": "string",
        },
        "name": {
          "minLength": 1,
          "type": "string",
        },
      },
      "required": [
        "name",
      ],
      "type": "object",
    },
  },
  "info": {
    "title": "Swagger title",
    "version": "1.2.0",
  },
  "paths": {
    "/rest/calendars": {
      "get": {
        "operationId": "calendarsControllerGetAll",
        "parameters": [],
        "produces": [
          "application/json",
        ],
        "responses": {
          "200": {
            "description": "Success",
            "schema": {
              "items": {
                "$ref": "#/definitions/Calendar",
              },
              "type": "array",
            },
          },
        },
        "tags": [
          "CalendarsController",
        ],
      },
    },
    "/rest/calendars/csv": {
      "post": {
        "consumes": [
          "text/plain",
        ],
        "operationId": "calendarsControllerCsv",
        "parameters": [
          {
            "in": "body",
            "name": "body",
            "required": false,
            "schema": {
              "type": "string",
            },
          },
        ],
        "produces": [
          "text/plain",
        ],
        "responses": {
          "200": {
            "description": "Success",
            "schema": {
              "type": "string",
            },
          },
        },
        "tags": [
          "CalendarsController",
        ],
      },
    },
    "/rest/calendars/events": {
      "get": {
        "description": "Events",
        "operationId": "eventCtrlGet",
        "parameters": [],
        "responses": {
          "200": {
            "description": "Success",
          },
        },
        "tags": [
          "EventCtrl",
        ],
      },
    },
    "/rest/calendars/{id}": {
      "get": {
        "operationId": "calendarsControllerGet",
        "parameters": [
          {
            "description": "An ObjectID",
            "in": "path",
            "name": "id",
            "pattern": "^[0-9a-fA-F]{24}$",
            "required": true,
            "type": "string",
          },
        ],
        "produces": [
          "application/json",
        ],
        "responses": {
          "200": {
            "description": "Success",
            "schema": {
              "$ref": "#/definitions/Calendar",
            },
          },
        },
        "tags": [
          "CalendarsController",
        ],
      },
    },
  },
  "produces": [
    "application/json",
  ],
  "swagger": "2.0",
  "tags": [
    {
      "name": "CalendarsController",
    },
    {
      "name": "EventCtrl",
    },
  ],
}
`;

exports[`Swagger integration > OpenSpec3 > should swagger spec 1`] = `
{
  "components": {
    "schemas": {
      "Calendar": {
        "properties": {
          "id": {
            "type": "string",
          },
          "name": {
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "name",
        ],
        "type": "object",
      },
    },
  },
  "info": {
    "title": "Api documentation",
    "version": "1.0.0",
  },
  "openapi": "3.0.1",
  "paths": {
    "/rest/calendars": {
      "get": {
        "operationId": "calendarsControllerGetAll",
        "parameters": [],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "items": {
                    "$ref": "#/components/schemas/Calendar",
                  },
                  "type": "array",
                },
              },
            },
            "description": "Success",
          },
        },
        "tags": [
          "CalendarsController",
        ],
      },
    },
    "/rest/calendars/csv": {
      "post": {
        "operationId": "calendarsControllerCsv",
        "parameters": [],
        "requestBody": {
          "content": {
            "text/plain": {
              "schema": {
                "type": "string",
              },
            },
          },
          "required": false,
        },
        "responses": {
          "200": {
            "content": {
              "text/plain": {
                "schema": {
                  "type": "string",
                },
              },
            },
            "description": "Success",
          },
        },
        "tags": [
          "CalendarsController",
        ],
      },
    },
    "/rest/calendars/events": {
      "get": {
        "description": "Events",
        "operationId": "eventCtrlGet",
        "parameters": [],
        "responses": {
          "200": {
            "description": "Success",
          },
        },
        "tags": [
          "EventCtrl",
        ],
      },
    },
    "/rest/calendars/{id}": {
      "get": {
        "operationId": "calendarsControllerGet",
        "parameters": [
          {
            "description": "An ObjectID",
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "example": "5ce7ad3028890bd71749d477",
              "pattern": "^[0-9a-fA-F]{24}$",
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Calendar",
                },
              },
            },
            "description": "Success",
          },
        },
        "tags": [
          "CalendarsController",
        ],
      },
    },
  },
  "tags": [
    {
      "name": "CalendarsController",
    },
    {
      "name": "EventCtrl",
    },
  ],
}
`;

exports[`Swagger integration OpenSpec2 should swagger spec 1`] = `
Object {
  "consumes": Array [
    "application/json",
  ],
  "definitions": Object {
    "Calendar": Object {
      "properties": Object {
        "id": Object {
          "type": "string",
        },
        "name": Object {
          "minLength": 1,
          "type": "string",
        },
      },
      "required": Array [
        "name",
      ],
      "type": "object",
    },
  },
  "info": Object {
    "title": "Swagger title",
    "version": "1.2.0",
  },
  "paths": Object {
    "/rest/calendars": Object {
      "get": Object {
        "operationId": "calendarsControllerGetAll",
        "parameters": Array [],
        "produces": Array [
          "application/json",
        ],
        "responses": Object {
          "200": Object {
            "description": "Success",
            "schema": Object {
              "items": Object {
                "$ref": "#/definitions/Calendar",
              },
              "type": "array",
            },
          },
        },
        "tags": Array [
          "CalendarsController",
        ],
      },
    },
    "/rest/calendars/csv": Object {
      "post": Object {
        "consumes": Array [
          "text/plain",
        ],
        "operationId": "calendarsControllerCsv",
        "parameters": Array [
          Object {
            "in": "body",
            "name": "body",
            "required": false,
            "schema": Object {
              "type": "string",
            },
          },
        ],
        "produces": Array [
          "text/plain",
        ],
        "responses": Object {
          "200": Object {
            "description": "Success",
            "schema": Object {
              "type": "string",
            },
          },
        },
        "tags": Array [
          "CalendarsController",
        ],
      },
    },
    "/rest/calendars/events": Object {
      "get": Object {
        "description": "Events",
        "operationId": "eventCtrlGet",
        "parameters": Array [],
        "responses": Object {
          "200": Object {
            "description": "Success",
          },
        },
        "tags": Array [
          "EventCtrl",
        ],
      },
    },
    "/rest/calendars/{id}": Object {
      "get": Object {
        "operationId": "calendarsControllerGet",
        "parameters": Array [
          Object {
            "description": "An ObjectID",
            "in": "path",
            "name": "id",
            "pattern": "^[0-9a-fA-F]{24}$",
            "required": true,
            "type": "string",
          },
        ],
        "produces": Array [
          "application/json",
        ],
        "responses": Object {
          "200": Object {
            "description": "Success",
            "schema": Object {
              "$ref": "#/definitions/Calendar",
            },
          },
        },
        "tags": Array [
          "CalendarsController",
        ],
      },
    },
  },
  "produces": Array [
    "application/json",
  ],
  "swagger": "2.0",
  "tags": Array [
    Object {
      "name": "CalendarsController",
    },
    Object {
      "name": "EventCtrl",
    },
  ],
}
`;

exports[`Swagger integration OpenSpec3 should swagger spec 1`] = `
Object {
  "components": Object {
    "schemas": Object {
      "Calendar": Object {
        "properties": Object {
          "id": Object {
            "type": "string",
          },
          "name": Object {
            "minLength": 1,
            "type": "string",
          },
        },
        "required": Array [
          "name",
        ],
        "type": "object",
      },
    },
  },
  "info": Object {
    "title": "Api documentation",
    "version": "1.0.0",
  },
  "openapi": "3.0.1",
  "paths": Object {
    "/rest/calendars": Object {
      "get": Object {
        "operationId": "calendarsControllerGetAll",
        "parameters": Array [],
        "responses": Object {
          "200": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "items": Object {
                    "$ref": "#/components/schemas/Calendar",
                  },
                  "type": "array",
                },
              },
            },
            "description": "Success",
          },
        },
        "tags": Array [
          "CalendarsController",
        ],
      },
    },
    "/rest/calendars/csv": Object {
      "post": Object {
        "operationId": "calendarsControllerCsv",
        "parameters": Array [],
        "requestBody": Object {
          "content": Object {
            "text/plain": Object {
              "schema": Object {
                "type": "string",
              },
            },
          },
          "required": false,
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "text/plain": Object {
                "schema": Object {
                  "type": "string",
                },
              },
            },
            "description": "Success",
          },
        },
        "tags": Array [
          "CalendarsController",
        ],
      },
    },
    "/rest/calendars/events": Object {
      "get": Object {
        "description": "Events",
        "operationId": "eventCtrlGet",
        "parameters": Array [],
        "responses": Object {
          "200": Object {
            "description": "Success",
          },
        },
        "tags": Array [
          "EventCtrl",
        ],
      },
    },
    "/rest/calendars/{id}": Object {
      "get": Object {
        "operationId": "calendarsControllerGet",
        "parameters": Array [
          Object {
            "description": "An ObjectID",
            "in": "path",
            "name": "id",
            "required": true,
            "schema": Object {
              "example": "5ce7ad3028890bd71749d477",
              "pattern": "^[0-9a-fA-F]{24}$",
              "type": "string",
            },
          },
        ],
        "responses": Object {
          "200": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "$ref": "#/components/schemas/Calendar",
                },
              },
            },
            "description": "Success",
          },
        },
        "tags": Array [
          "CalendarsController",
        ],
      },
    },
  },
  "tags": Array [
    Object {
      "name": "CalendarsController",
    },
    Object {
      "name": "EventCtrl",
    },
  ],
}
`;
